src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    LABEL
    UMINUS
    UNTIL
    WITH

Grammar

Rule 0     S' -> program
Rule 1     program -> header block DOT
Rule 2     header -> PROGRAM ID LPAREN id_list RPAREN SEMICOLON
Rule 3     header -> PROGRAM ID SEMICOLON
Rule 4     id_list -> id_list COMMA ID
Rule 5     id_list -> ID
Rule 6     empty -> <empty>
Rule 7     block -> declarations compound_statement
Rule 8     declarations -> declarations variable_declaration
Rule 9     declarations -> declarations function_declaration
Rule 10    declarations -> declarations procedure_declaration
Rule 11    declarations -> empty
Rule 12    variable_declaration -> VAR variable_list SEMICOLON
Rule 13    function_declaration -> FUNCTION ID parameter_list COLON type SEMICOLON block SEMICOLON
Rule 14    procedure_declaration -> PROCEDURE ID parameter_list SEMICOLON block SEMICOLON
Rule 15    variable_list -> variable_list SEMICOLON variable
Rule 16    variable_list -> variable
Rule 17    variable -> id_list COLON type
Rule 18    type -> ID
Rule 19    type -> INTEGER
Rule 20    type -> REAL
Rule 21    type -> BOOLEAN
Rule 22    type -> CHAR
Rule 23    type -> BYTE
Rule 24    type -> WORD
Rule 25    type -> LONGINT
Rule 26    type -> SHORTINT
Rule 27    type -> SINGLE
Rule 28    type -> DOUBLE
Rule 29    type -> STRING
Rule 30    type -> ARRAY LBRACKET NUMBER DOT DOT NUMBER RBRACKET OF type
Rule 31    field_list -> field_list SEMICOLON field
Rule 32    field_list -> field
Rule 33    field -> id_list COLON type
Rule 34    parameter_list -> LPAREN parameter_section_list RPAREN
Rule 35    parameter_list -> empty
Rule 36    parameter_section_list -> parameter_section_list SEMICOLON parameter_section
Rule 37    parameter_section_list -> parameter_section
Rule 38    parameter_section -> id_list COLON type
Rule 39    parameter_section -> VAR id_list COLON type
Rule 40    compound_statement -> BEGIN statement_list END
Rule 41    statement_list -> statement_list SEMICOLON statement
Rule 42    statement_list -> statement
Rule 43    statement -> assignment_statement
Rule 44    statement -> expression
Rule 45    statement -> compound_statement
Rule 46    statement -> io_statement
Rule 47    statement -> if_statement
Rule 48    statement -> while_statement
Rule 49    statement -> for_statement
Rule 50    statement -> empty
Rule 51    assignment_statement -> ID ASSIGN expression
Rule 52    expression -> additive_expression
Rule 53    expression -> expression EQUALS additive_expression
Rule 54    expression -> expression NE additive_expression
Rule 55    expression -> expression LT additive_expression
Rule 56    expression -> expression GT additive_expression
Rule 57    expression -> expression LE additive_expression
Rule 58    expression -> expression GE additive_expression
Rule 59    expression -> expression IN additive_expression
Rule 60    additive_expression -> multiplicative_expression
Rule 61    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 62    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 63    additive_expression -> additive_expression OR multiplicative_expression
Rule 64    additive_expression -> additive_expression ORELSE multiplicative_expression
Rule 65    multiplicative_expression -> factor
Rule 66    multiplicative_expression -> multiplicative_expression TIMES factor
Rule 67    multiplicative_expression -> multiplicative_expression DIVIDE factor
Rule 68    multiplicative_expression -> multiplicative_expression DIV factor
Rule 69    multiplicative_expression -> multiplicative_expression MOD factor
Rule 70    multiplicative_expression -> multiplicative_expression AND factor
Rule 71    multiplicative_expression -> multiplicative_expression ANDTHEN factor
Rule 72    factor -> NUMBER
Rule 73    factor -> STRING
Rule 74    factor -> ID
Rule 75    factor -> TRUE
Rule 76    factor -> FALSE
Rule 77    factor -> LPAREN expression RPAREN
Rule 78    factor -> factor LBRACKET expression RBRACKET
Rule 79    factor -> ID LPAREN expression_list RPAREN
Rule 80    factor -> MINUS factor
Rule 81    factor -> NOT factor
Rule 82    expression_list -> expression_list COMMA expression
Rule 83    expression_list -> expression
Rule 84    expression_list -> empty
Rule 85    io_statement -> WRITE LPAREN expression_list RPAREN
Rule 86    io_statement -> WRITELN LPAREN expression_list RPAREN
Rule 87    io_statement -> READ LPAREN expression_list RPAREN
Rule 88    io_statement -> READLN LPAREN expression_list RPAREN
Rule 89    if_statement -> IF expression THEN statement ELSE statement
Rule 90    if_statement -> IF expression THEN statement
Rule 91    while_statement -> WHILE expression DO statement
Rule 92    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 93    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement

Terminals, with rules where they appear

AND                  : 70
ANDTHEN              : 71
ARRAY                : 30
ASSIGN               : 51 92 93
BEGIN                : 40
BOOLEAN              : 21
BYTE                 : 23
CHAR                 : 22
COLON                : 13 17 33 38 39
COMMA                : 4 82
CONST                : 
DIV                  : 68
DIVIDE               : 67
DO                   : 91 92 93
DOT                  : 1 30 30
DOUBLE               : 28
DOWNTO               : 93
ELSE                 : 89
END                  : 40
EQUALS               : 53
FALSE                : 76
FOR                  : 92 93
FUNCTION             : 13
GE                   : 58
GT                   : 56
ID                   : 2 3 4 5 13 14 18 51 74 79 92 93
IF                   : 89 90
IN                   : 59
INTEGER              : 19
LABEL                : 
LBRACKET             : 30 78
LE                   : 57
LONGINT              : 25
LPAREN               : 2 34 77 79 85 86 87 88
LT                   : 55
MINUS                : 62 80
MOD                  : 69
NE                   : 54
NOT                  : 81
NUMBER               : 30 30 72
OF                   : 30
OR                   : 63
ORELSE               : 64
PLUS                 : 61
PROCEDURE            : 14
PROGRAM              : 2 3
RBRACKET             : 30 78
READ                 : 87
READLN               : 88
REAL                 : 20
RPAREN               : 2 34 77 79 85 86 87 88
SEMICOLON            : 2 3 12 13 13 14 14 15 31 36 41
SHORTINT             : 26
SINGLE               : 27
STRING               : 29 73
THEN                 : 89 90
TIMES                : 66
TO                   : 92
TRUE                 : 75
UMINUS               : 
UNTIL                : 
VAR                  : 12 39
WHILE                : 91
WITH                 : 
WORD                 : 24
WRITE                : 85
WRITELN              : 86
error                : 

Nonterminals, with rules where they appear

additive_expression  : 52 53 54 55 56 57 58 59 61 62 63 64
assignment_statement : 43
block                : 1 13 14
compound_statement   : 7 45
declarations         : 7 8 9 10
empty                : 11 35 50 84
expression           : 44 51 53 54 55 56 57 58 59 77 78 82 83 89 90 91 92 92 93 93
expression_list      : 79 82 85 86 87 88
factor               : 65 66 67 68 69 70 71 78 80 81
field                : 31 32
field_list           : 31
for_statement        : 49
function_declaration : 9
header               : 1
id_list              : 2 4 17 33 38 39
if_statement         : 47
io_statement         : 46
multiplicative_expression : 60 61 62 63 64 66 67 68 69 70 71
parameter_list       : 13 14
parameter_section    : 36 37
parameter_section_list : 34 36
procedure_declaration : 10
program              : 0
statement            : 41 42 89 89 90 91 92 93
statement_list       : 40 41
type                 : 13 17 30 33 38 39
variable             : 15 16
variable_declaration : 8
variable_list        : 12 15
while_statement      : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . header block DOT
    (2) header -> . PROGRAM ID LPAREN id_list RPAREN SEMICOLON
    (3) header -> . PROGRAM ID SEMICOLON

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    header                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> header . block DOT
    (7) block -> . declarations compound_statement
    (8) declarations -> . declarations variable_declaration
    (9) declarations -> . declarations function_declaration
    (10) declarations -> . declarations procedure_declaration
    (11) declarations -> . empty
    (6) empty -> .

    BEGIN           reduce using rule 6 (empty -> .)
    VAR             reduce using rule 6 (empty -> .)
    FUNCTION        reduce using rule 6 (empty -> .)
    PROCEDURE       reduce using rule 6 (empty -> .)

    block                          shift and go to state 4
    declarations                   shift and go to state 5
    empty                          shift and go to state 6

state 3

    (2) header -> PROGRAM . ID LPAREN id_list RPAREN SEMICOLON
    (3) header -> PROGRAM . ID SEMICOLON

    ID              shift and go to state 7


state 4

    (1) program -> header block . DOT

    DOT             shift and go to state 8


state 5

    (7) block -> declarations . compound_statement
    (8) declarations -> declarations . variable_declaration
    (9) declarations -> declarations . function_declaration
    (10) declarations -> declarations . procedure_declaration
    (40) compound_statement -> . BEGIN statement_list END
    (12) variable_declaration -> . VAR variable_list SEMICOLON
    (13) function_declaration -> . FUNCTION ID parameter_list COLON type SEMICOLON block SEMICOLON
    (14) procedure_declaration -> . PROCEDURE ID parameter_list SEMICOLON block SEMICOLON

    BEGIN           shift and go to state 13
    VAR             shift and go to state 14
    FUNCTION        shift and go to state 15
    PROCEDURE       shift and go to state 16

    compound_statement             shift and go to state 9
    variable_declaration           shift and go to state 10
    function_declaration           shift and go to state 11
    procedure_declaration          shift and go to state 12

state 6

    (11) declarations -> empty .

    BEGIN           reduce using rule 11 (declarations -> empty .)
    VAR             reduce using rule 11 (declarations -> empty .)
    FUNCTION        reduce using rule 11 (declarations -> empty .)
    PROCEDURE       reduce using rule 11 (declarations -> empty .)


state 7

    (2) header -> PROGRAM ID . LPAREN id_list RPAREN SEMICOLON
    (3) header -> PROGRAM ID . SEMICOLON

    LPAREN          shift and go to state 17
    SEMICOLON       shift and go to state 18


state 8

    (1) program -> header block DOT .

    $end            reduce using rule 1 (program -> header block DOT .)


state 9

    (7) block -> declarations compound_statement .

    DOT             reduce using rule 7 (block -> declarations compound_statement .)
    SEMICOLON       reduce using rule 7 (block -> declarations compound_statement .)


state 10

    (8) declarations -> declarations variable_declaration .

    BEGIN           reduce using rule 8 (declarations -> declarations variable_declaration .)
    VAR             reduce using rule 8 (declarations -> declarations variable_declaration .)
    FUNCTION        reduce using rule 8 (declarations -> declarations variable_declaration .)
    PROCEDURE       reduce using rule 8 (declarations -> declarations variable_declaration .)


state 11

    (9) declarations -> declarations function_declaration .

    BEGIN           reduce using rule 9 (declarations -> declarations function_declaration .)
    VAR             reduce using rule 9 (declarations -> declarations function_declaration .)
    FUNCTION        reduce using rule 9 (declarations -> declarations function_declaration .)
    PROCEDURE       reduce using rule 9 (declarations -> declarations function_declaration .)


state 12

    (10) declarations -> declarations procedure_declaration .

    BEGIN           reduce using rule 10 (declarations -> declarations procedure_declaration .)
    VAR             reduce using rule 10 (declarations -> declarations procedure_declaration .)
    FUNCTION        reduce using rule 10 (declarations -> declarations procedure_declaration .)
    PROCEDURE       reduce using rule 10 (declarations -> declarations procedure_declaration .)


state 13

    (40) compound_statement -> BEGIN . statement_list END
    (41) statement_list -> . statement_list SEMICOLON statement
    (42) statement_list -> . statement
    (43) statement -> . assignment_statement
    (44) statement -> . expression
    (45) statement -> . compound_statement
    (46) statement -> . io_statement
    (47) statement -> . if_statement
    (48) statement -> . while_statement
    (49) statement -> . for_statement
    (50) statement -> . empty
    (51) assignment_statement -> . ID ASSIGN expression
    (52) expression -> . additive_expression
    (53) expression -> . expression EQUALS additive_expression
    (54) expression -> . expression NE additive_expression
    (55) expression -> . expression LT additive_expression
    (56) expression -> . expression GT additive_expression
    (57) expression -> . expression LE additive_expression
    (58) expression -> . expression GE additive_expression
    (59) expression -> . expression IN additive_expression
    (40) compound_statement -> . BEGIN statement_list END
    (85) io_statement -> . WRITE LPAREN expression_list RPAREN
    (86) io_statement -> . WRITELN LPAREN expression_list RPAREN
    (87) io_statement -> . READ LPAREN expression_list RPAREN
    (88) io_statement -> . READLN LPAREN expression_list RPAREN
    (89) if_statement -> . IF expression THEN statement ELSE statement
    (90) if_statement -> . IF expression THEN statement
    (91) while_statement -> . WHILE expression DO statement
    (92) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (93) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (6) empty -> .
    (60) additive_expression -> . multiplicative_expression
    (61) additive_expression -> . additive_expression PLUS multiplicative_expression
    (62) additive_expression -> . additive_expression MINUS multiplicative_expression
    (63) additive_expression -> . additive_expression OR multiplicative_expression
    (64) additive_expression -> . additive_expression ORELSE multiplicative_expression
    (65) multiplicative_expression -> . factor
    (66) multiplicative_expression -> . multiplicative_expression TIMES factor
    (67) multiplicative_expression -> . multiplicative_expression DIVIDE factor
    (68) multiplicative_expression -> . multiplicative_expression DIV factor
    (69) multiplicative_expression -> . multiplicative_expression MOD factor
    (70) multiplicative_expression -> . multiplicative_expression AND factor
    (71) multiplicative_expression -> . multiplicative_expression ANDTHEN factor
    (72) factor -> . NUMBER
    (73) factor -> . STRING
    (74) factor -> . ID
    (75) factor -> . TRUE
    (76) factor -> . FALSE
    (77) factor -> . LPAREN expression RPAREN
    (78) factor -> . factor LBRACKET expression RBRACKET
    (79) factor -> . ID LPAREN expression_list RPAREN
    (80) factor -> . MINUS factor
    (81) factor -> . NOT factor

    ID              shift and go to state 29
    BEGIN           shift and go to state 13
    WRITE           shift and go to state 31
    WRITELN         shift and go to state 33
    READ            shift and go to state 34
    READLN          shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    FOR             shift and go to state 38
    END             reduce using rule 6 (empty -> .)
    SEMICOLON       reduce using rule 6 (empty -> .)
    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    LPAREN          shift and go to state 32
    MINUS           shift and go to state 40
    NOT             shift and go to state 46

    statement_list                 shift and go to state 19
    statement                      shift and go to state 20
    assignment_statement           shift and go to state 21
    expression                     shift and go to state 22
    compound_statement             shift and go to state 23
    io_statement                   shift and go to state 24
    if_statement                   shift and go to state 25
    while_statement                shift and go to state 26
    for_statement                  shift and go to state 27
    empty                          shift and go to state 28
    additive_expression            shift and go to state 30
    multiplicative_expression      shift and go to state 39
    factor                         shift and go to state 41

state 14

    (12) variable_declaration -> VAR . variable_list SEMICOLON
    (15) variable_list -> . variable_list SEMICOLON variable
    (16) variable_list -> . variable
    (17) variable -> . id_list COLON type
    (4) id_list -> . id_list COMMA ID
    (5) id_list -> . ID

    ID              shift and go to state 50

    variable_list                  shift and go to state 47
    variable                       shift and go to state 48
    id_list                        shift and go to state 49

state 15

    (13) function_declaration -> FUNCTION . ID parameter_list COLON type SEMICOLON block SEMICOLON

    ID              shift and go to state 51


state 16

    (14) procedure_declaration -> PROCEDURE . ID parameter_list SEMICOLON block SEMICOLON

    ID              shift and go to state 52


state 17

    (2) header -> PROGRAM ID LPAREN . id_list RPAREN SEMICOLON
    (4) id_list -> . id_list COMMA ID
    (5) id_list -> . ID

    ID              shift and go to state 50

    id_list                        shift and go to state 53

state 18

    (3) header -> PROGRAM ID SEMICOLON .

    BEGIN           reduce using rule 3 (header -> PROGRAM ID SEMICOLON .)
    VAR             reduce using rule 3 (header -> PROGRAM ID SEMICOLON .)
    FUNCTION        reduce using rule 3 (header -> PROGRAM ID SEMICOLON .)
    PROCEDURE       reduce using rule 3 (header -> PROGRAM ID SEMICOLON .)


state 19

    (40) compound_statement -> BEGIN statement_list . END
    (41) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 54
    SEMICOLON       shift and go to state 55


state 20

    (42) statement_list -> statement .

    END             reduce using rule 42 (statement_list -> statement .)
    SEMICOLON       reduce using rule 42 (statement_list -> statement .)


state 21

    (43) statement -> assignment_statement .

    END             reduce using rule 43 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 43 (statement -> assignment_statement .)
    ELSE            reduce using rule 43 (statement -> assignment_statement .)


state 22

    (44) statement -> expression .
    (53) expression -> expression . EQUALS additive_expression
    (54) expression -> expression . NE additive_expression
    (55) expression -> expression . LT additive_expression
    (56) expression -> expression . GT additive_expression
    (57) expression -> expression . LE additive_expression
    (58) expression -> expression . GE additive_expression
    (59) expression -> expression . IN additive_expression

    END             reduce using rule 44 (statement -> expression .)
    SEMICOLON       reduce using rule 44 (statement -> expression .)
    ELSE            reduce using rule 44 (statement -> expression .)
    EQUALS          shift and go to state 56
    NE              shift and go to state 57
    LT              shift and go to state 58
    GT              shift and go to state 59
    LE              shift and go to state 60
    GE              shift and go to state 61
    IN              shift and go to state 62


state 23

    (45) statement -> compound_statement .

    END             reduce using rule 45 (statement -> compound_statement .)
    SEMICOLON       reduce using rule 45 (statement -> compound_statement .)
    ELSE            reduce using rule 45 (statement -> compound_statement .)


state 24

    (46) statement -> io_statement .

    END             reduce using rule 46 (statement -> io_statement .)
    SEMICOLON       reduce using rule 46 (statement -> io_statement .)
    ELSE            reduce using rule 46 (statement -> io_statement .)


state 25

    (47) statement -> if_statement .

    END             reduce using rule 47 (statement -> if_statement .)
    SEMICOLON       reduce using rule 47 (statement -> if_statement .)
    ELSE            reduce using rule 47 (statement -> if_statement .)


state 26

    (48) statement -> while_statement .

    END             reduce using rule 48 (statement -> while_statement .)
    SEMICOLON       reduce using rule 48 (statement -> while_statement .)
    ELSE            reduce using rule 48 (statement -> while_statement .)


state 27

    (49) statement -> for_statement .

    END             reduce using rule 49 (statement -> for_statement .)
    SEMICOLON       reduce using rule 49 (statement -> for_statement .)
    ELSE            reduce using rule 49 (statement -> for_statement .)


state 28

    (50) statement -> empty .

    END             reduce using rule 50 (statement -> empty .)
    SEMICOLON       reduce using rule 50 (statement -> empty .)
    ELSE            reduce using rule 50 (statement -> empty .)


state 29

    (51) assignment_statement -> ID . ASSIGN expression
    (74) factor -> ID .
    (79) factor -> ID . LPAREN expression_list RPAREN

    ASSIGN          shift and go to state 63
    LBRACKET        reduce using rule 74 (factor -> ID .)
    TIMES           reduce using rule 74 (factor -> ID .)
    DIVIDE          reduce using rule 74 (factor -> ID .)
    DIV             reduce using rule 74 (factor -> ID .)
    MOD             reduce using rule 74 (factor -> ID .)
    AND             reduce using rule 74 (factor -> ID .)
    ANDTHEN         reduce using rule 74 (factor -> ID .)
    PLUS            reduce using rule 74 (factor -> ID .)
    MINUS           reduce using rule 74 (factor -> ID .)
    OR              reduce using rule 74 (factor -> ID .)
    ORELSE          reduce using rule 74 (factor -> ID .)
    EQUALS          reduce using rule 74 (factor -> ID .)
    NE              reduce using rule 74 (factor -> ID .)
    LT              reduce using rule 74 (factor -> ID .)
    GT              reduce using rule 74 (factor -> ID .)
    LE              reduce using rule 74 (factor -> ID .)
    GE              reduce using rule 74 (factor -> ID .)
    IN              reduce using rule 74 (factor -> ID .)
    END             reduce using rule 74 (factor -> ID .)
    SEMICOLON       reduce using rule 74 (factor -> ID .)
    ELSE            reduce using rule 74 (factor -> ID .)
    LPAREN          shift and go to state 64


state 30

    (52) expression -> additive_expression .
    (61) additive_expression -> additive_expression . PLUS multiplicative_expression
    (62) additive_expression -> additive_expression . MINUS multiplicative_expression
    (63) additive_expression -> additive_expression . OR multiplicative_expression
    (64) additive_expression -> additive_expression . ORELSE multiplicative_expression

    EQUALS          reduce using rule 52 (expression -> additive_expression .)
    NE              reduce using rule 52 (expression -> additive_expression .)
    LT              reduce using rule 52 (expression -> additive_expression .)
    GT              reduce using rule 52 (expression -> additive_expression .)
    LE              reduce using rule 52 (expression -> additive_expression .)
    GE              reduce using rule 52 (expression -> additive_expression .)
    IN              reduce using rule 52 (expression -> additive_expression .)
    END             reduce using rule 52 (expression -> additive_expression .)
    SEMICOLON       reduce using rule 52 (expression -> additive_expression .)
    RPAREN          reduce using rule 52 (expression -> additive_expression .)
    THEN            reduce using rule 52 (expression -> additive_expression .)
    DO              reduce using rule 52 (expression -> additive_expression .)
    ELSE            reduce using rule 52 (expression -> additive_expression .)
    COMMA           reduce using rule 52 (expression -> additive_expression .)
    RBRACKET        reduce using rule 52 (expression -> additive_expression .)
    TO              reduce using rule 52 (expression -> additive_expression .)
    DOWNTO          reduce using rule 52 (expression -> additive_expression .)
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66
    OR              shift and go to state 67
    ORELSE          shift and go to state 68


state 31

    (85) io_statement -> WRITE . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 69


state 32

    (77) factor -> LPAREN . expression RPAREN
    (52) expression -> . additive_expression
    (53) expression -> . expression EQUALS additive_expression
    (54) expression -> . expression NE additive_expression
    (55) expression -> . expression LT additive_expression
    (56) expression -> . expression GT additive_expression
    (57) expression -> . expression LE additive_expression
    (58) expression -> . expression GE additive_expression
    (59) expression -> . expression IN additive_expression
    (60) additive_expression -> . multiplicative_expression
    (61) additive_expression -> . additive_expression PLUS multiplicative_expression
    (62) additive_expression -> . additive_expression MINUS multiplicative_expression
    (63) additive_expression -> . additive_expression OR multiplicative_expression
    (64) additive_expression -> . additive_expression ORELSE multiplicative_expression
    (65) multiplicative_expression -> . factor
    (66) multiplicative_expression -> . multiplicative_expression TIMES factor
    (67) multiplicative_expression -> . multiplicative_expression DIVIDE factor
    (68) multiplicative_expression -> . multiplicative_expression DIV factor
    (69) multiplicative_expression -> . multiplicative_expression MOD factor
    (70) multiplicative_expression -> . multiplicative_expression AND factor
    (71) multiplicative_expression -> . multiplicative_expression ANDTHEN factor
    (72) factor -> . NUMBER
    (73) factor -> . STRING
    (74) factor -> . ID
    (75) factor -> . TRUE
    (76) factor -> . FALSE
    (77) factor -> . LPAREN expression RPAREN
    (78) factor -> . factor LBRACKET expression RBRACKET
    (79) factor -> . ID LPAREN expression_list RPAREN
    (80) factor -> . MINUS factor
    (81) factor -> . NOT factor

    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    ID              shift and go to state 71
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    LPAREN          shift and go to state 32
    MINUS           shift and go to state 40
    NOT             shift and go to state 46

    expression                     shift and go to state 70
    additive_expression            shift and go to state 30
    multiplicative_expression      shift and go to state 39
    factor                         shift and go to state 41

state 33

    (86) io_statement -> WRITELN . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 72


state 34

    (87) io_statement -> READ . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 73


state 35

    (88) io_statement -> READLN . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 74


state 36

    (89) if_statement -> IF . expression THEN statement ELSE statement
    (90) if_statement -> IF . expression THEN statement
    (52) expression -> . additive_expression
    (53) expression -> . expression EQUALS additive_expression
    (54) expression -> . expression NE additive_expression
    (55) expression -> . expression LT additive_expression
    (56) expression -> . expression GT additive_expression
    (57) expression -> . expression LE additive_expression
    (58) expression -> . expression GE additive_expression
    (59) expression -> . expression IN additive_expression
    (60) additive_expression -> . multiplicative_expression
    (61) additive_expression -> . additive_expression PLUS multiplicative_expression
    (62) additive_expression -> . additive_expression MINUS multiplicative_expression
    (63) additive_expression -> . additive_expression OR multiplicative_expression
    (64) additive_expression -> . additive_expression ORELSE multiplicative_expression
    (65) multiplicative_expression -> . factor
    (66) multiplicative_expression -> . multiplicative_expression TIMES factor
    (67) multiplicative_expression -> . multiplicative_expression DIVIDE factor
    (68) multiplicative_expression -> . multiplicative_expression DIV factor
    (69) multiplicative_expression -> . multiplicative_expression MOD factor
    (70) multiplicative_expression -> . multiplicative_expression AND factor
    (71) multiplicative_expression -> . multiplicative_expression ANDTHEN factor
    (72) factor -> . NUMBER
    (73) factor -> . STRING
    (74) factor -> . ID
    (75) factor -> . TRUE
    (76) factor -> . FALSE
    (77) factor -> . LPAREN expression RPAREN
    (78) factor -> . factor LBRACKET expression RBRACKET
    (79) factor -> . ID LPAREN expression_list RPAREN
    (80) factor -> . MINUS factor
    (81) factor -> . NOT factor

    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    ID              shift and go to state 71
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    LPAREN          shift and go to state 32
    MINUS           shift and go to state 40
    NOT             shift and go to state 46

    expression                     shift and go to state 75
    additive_expression            shift and go to state 30
    multiplicative_expression      shift and go to state 39
    factor                         shift and go to state 41

state 37

    (91) while_statement -> WHILE . expression DO statement
    (52) expression -> . additive_expression
    (53) expression -> . expression EQUALS additive_expression
    (54) expression -> . expression NE additive_expression
    (55) expression -> . expression LT additive_expression
    (56) expression -> . expression GT additive_expression
    (57) expression -> . expression LE additive_expression
    (58) expression -> . expression GE additive_expression
    (59) expression -> . expression IN additive_expression
    (60) additive_expression -> . multiplicative_expression
    (61) additive_expression -> . additive_expression PLUS multiplicative_expression
    (62) additive_expression -> . additive_expression MINUS multiplicative_expression
    (63) additive_expression -> . additive_expression OR multiplicative_expression
    (64) additive_expression -> . additive_expression ORELSE multiplicative_expression
    (65) multiplicative_expression -> . factor
    (66) multiplicative_expression -> . multiplicative_expression TIMES factor
    (67) multiplicative_expression -> . multiplicative_expression DIVIDE factor
    (68) multiplicative_expression -> . multiplicative_expression DIV factor
    (69) multiplicative_expression -> . multiplicative_expression MOD factor
    (70) multiplicative_expression -> . multiplicative_expression AND factor
    (71) multiplicative_expression -> . multiplicative_expression ANDTHEN factor
    (72) factor -> . NUMBER
    (73) factor -> . STRING
    (74) factor -> . ID
    (75) factor -> . TRUE
    (76) factor -> . FALSE
    (77) factor -> . LPAREN expression RPAREN
    (78) factor -> . factor LBRACKET expression RBRACKET
    (79) factor -> . ID LPAREN expression_list RPAREN
    (80) factor -> . MINUS factor
    (81) factor -> . NOT factor

    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    ID              shift and go to state 71
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    LPAREN          shift and go to state 32
    MINUS           shift and go to state 40
    NOT             shift and go to state 46

    expression                     shift and go to state 76
    additive_expression            shift and go to state 30
    multiplicative_expression      shift and go to state 39
    factor                         shift and go to state 41

state 38

    (92) for_statement -> FOR . ID ASSIGN expression TO expression DO statement
    (93) for_statement -> FOR . ID ASSIGN expression DOWNTO expression DO statement

    ID              shift and go to state 77


state 39

    (60) additive_expression -> multiplicative_expression .
    (66) multiplicative_expression -> multiplicative_expression . TIMES factor
    (67) multiplicative_expression -> multiplicative_expression . DIVIDE factor
    (68) multiplicative_expression -> multiplicative_expression . DIV factor
    (69) multiplicative_expression -> multiplicative_expression . MOD factor
    (70) multiplicative_expression -> multiplicative_expression . AND factor
    (71) multiplicative_expression -> multiplicative_expression . ANDTHEN factor

    PLUS            reduce using rule 60 (additive_expression -> multiplicative_expression .)
    MINUS           reduce using rule 60 (additive_expression -> multiplicative_expression .)
    OR              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    ORELSE          reduce using rule 60 (additive_expression -> multiplicative_expression .)
    EQUALS          reduce using rule 60 (additive_expression -> multiplicative_expression .)
    NE              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    LT              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    GT              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    LE              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    GE              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    IN              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    END             reduce using rule 60 (additive_expression -> multiplicative_expression .)
    SEMICOLON       reduce using rule 60 (additive_expression -> multiplicative_expression .)
    RPAREN          reduce using rule 60 (additive_expression -> multiplicative_expression .)
    THEN            reduce using rule 60 (additive_expression -> multiplicative_expression .)
    DO              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    ELSE            reduce using rule 60 (additive_expression -> multiplicative_expression .)
    COMMA           reduce using rule 60 (additive_expression -> multiplicative_expression .)
    RBRACKET        reduce using rule 60 (additive_expression -> multiplicative_expression .)
    TO              reduce using rule 60 (additive_expression -> multiplicative_expression .)
    DOWNTO          reduce using rule 60 (additive_expression -> multiplicative_expression .)
    TIMES           shift and go to state 78
    DIVIDE          shift and go to state 79
    DIV             shift and go to state 80
    MOD             shift and go to state 81
    AND             shift and go to state 82
    ANDTHEN         shift and go to state 83


state 40

    (80) factor -> MINUS . factor
    (72) factor -> . NUMBER
    (73) factor -> . STRING
    (74) factor -> . ID
    (75) factor -> . TRUE
    (76) factor -> . FALSE
    (77) factor -> . LPAREN expression RPAREN
    (78) factor -> . factor LBRACKET expression RBRACKET
    (79) factor -> . ID LPAREN expression_list RPAREN
    (80) factor -> . MINUS factor
    (81) factor -> . NOT factor

    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    ID              shift and go to state 71
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    LPAREN          shift and go to state 32
    MINUS           shift and go to state 40
    NOT             shift and go to state 46

    factor                         shift and go to state 84

state 41

    (65) multiplicative_expression -> factor .
    (78) factor -> factor . LBRACKET expression RBRACKET
